--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     background-color: rgb(232, 64, 92);
     color: white;
 }
+.domain{
+    display: flex;
+    height: 30px;
+    align-items: center;
+}
 .home-btn{
     height:26px; 
     width: 60px;
@@ -30,14 +35,16 @@
 }
 h1{
     color: brown;
-    font-weight:bolder;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40px;
+    font-weight: 800;
 }
 .logo{
     height: 80px;
-    width: 200px;
+    /* width: 200px; */
     padding-top: 5px;
-    margin-left: 45%;
-    margin-bottom: 8px;
+    /* margin-left: 45%;
+    margin-bottom: 8px; */
     display: flex;
     align-items: center;
 }
@@ -317,6 +324,7 @@ input{color:white}
     border: 1px solid rgba(146, 146, 146, 0.447);
     color: white;
     margin: 0px 5px;
+    transition: 500ms;
 }
 .page-no-1{
     height:40px;
@@ -341,4 +349,6 @@ input{color:white}
 .page-no-box:hover{
     background-color: rgb(215, 23, 23);
     border:1px solid rgba(146, 146, 146, 0.447);
+    border-radius: 20%;
+    scale: 1.3;
 }
